--- a/rebar.config
+++ b/rebar.config
@@ -1,4 +1,3 @@
-{deps,
- [
-  {parse_trans, ".*", {git, "https://github.com/esl/parse_trans.git", {branch, "master"}}}
+{deps, [
+  {parse_trans, "2.5.5", {git, "https://github.com/esl/parse_trans.git", {tag, "2.5.5"}}}
 ]}.
