--- a/rebar.config
+++ b/rebar.config
@@ -1,3 +1,3 @@
 {deps, [
-  {parse_trans, "2.5.5", {git, "https://github.com/esl/parse_trans.git", {tag, "2.5.5"}}}
+  {parse_trans, "3.1.0", {git, "https://github.com/uwiger/parse_trans.git", {tag, "3.1.0"}}}
 ]}.
